# smartscan

./: .copier-answers.yaml  .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  .yamlfmt.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  justfile  pyproject.toml  ruff.toml  zensical.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml  docs.yaml  publish-to-pypi.yaml  publish-to-test-pypi.yaml
docs/: api.md  configuration.md  getting-started.md  index.md  llm-examples.md
src/smartscan/: __init__.py  __main__.py  cli.py  commands.py  config.py  constants.py  database.py  dedup.py  exceptions.py  fields.py  llm.py  logging.py  models.py  notifications.py  output.py  smartctl.py  thresholds.py  utils.py
src/smartscan/llm/: __init__.py  prompts.py  providers.py
src/smartscan/notifications/: __init__.py  channels.py  report.py
tests/: conftest.py  test_cli.py  test_core.py  test_dedup.py  test_llm.py  test_output.py
